--- a/open_market_movil/assets/i18n/es.json
+++ b/open_market_movil/assets/i18n/es.json
@@ -1,3 +1,11 @@
 {
-  "bienvenida": "Hola, bienvenido a la aplicacion"
+  "bienvenida": "Hola, bienvenido a la aplicacion",
+  "mensajeInicio": "Bienvenido al mercado comunitario",
+  "mensajes": {
+    "mensajeInicio": "Bienvenido",
+    "mensajesError": {
+      "errorConsulta": "Error consultado datos",
+      "errorInternet": "No hay conexion a internet"
+    }
+  }
 }
