--- a/open_market_movil/assets/i18n/submodulo-auth0/en.json
+++ b/open_market_movil/assets/i18n/submodulo-auth0/en.json
@@ -1,3 +1,9 @@
 {
-  "hola": "hello"
+  "hola": "hello",
+  "drawner": {
+    "opciones": {
+      "perfil": "Watch my Profile",
+      "acerca": "About.."
+    }
+  }
 }
