--- a/open_market_movil/assets/i18n/submodulo-auth0/es.json
+++ b/open_market_movil/assets/i18n/submodulo-auth0/es.json
@@ -1,3 +1,9 @@
 {
-  "hola": "hola"
+  "hola": "hola",
+  "drawner": {
+    "opciones": {
+      "perfil": "Ver mi Perfil",
+      "acerca": "Acerca.."
+    }
+  }
 }
