drawner fixed y cambio de idioma

--- a/open_market_movil/assets/i18n/submodulo-auth0/en.json
+++ b/open_market_movil/assets/i18n/submodulo-auth0/en.json
@@ -2,6 +2,7 @@
   "hola": "hello",
   "drawner": {
     "opciones": {
+      "modoOscuro": "Dark Mode",
       "perfil": "Watch my Profile",
       "acerca": "About.."
     }
