--- a/open_market_movil/assets/i18n/submodulo-auth0/es.json
+++ b/open_market_movil/assets/i18n/submodulo-auth0/es.json
@@ -2,6 +2,7 @@
   "hola": "hola",
   "drawner": {
     "opciones": {
+      "modoOscuro": "Modo Oscuro",
       "perfil": "Ver mi Perfil",
       "acerca": "Acerca.."
     }
