mensaje de bienvenida

--- a/open_market_movil/assets/i18n/en.json
+++ b/open_market_movil/assets/i18n/en.json
@@ -1,6 +1,6 @@
 {
   "bienvenida": "Hello, welcome to the app",
-  "mensajeInicio": "Welcome to the community market",
+  "mensajeInicio": "Welcome!!",
   "mensajes": {
     "mensajeInicio": "Welcome",
     "mensajesError": {
