--- a/open_market_movil/assets/i18n/es.json
+++ b/open_market_movil/assets/i18n/es.json
@@ -1,6 +1,6 @@
 {
   "bienvenida": "Hola, bienvenido a la aplicacion",
-  "mensajeInicio": "Bienvenido al mercado comunitario",
+  "mensajeInicio": "Bienvenido!!",
   "mensajes": {
     "mensajeInicio": "Bienvenido",
     "mensajesError": {
